# baspacho

./: .clang-format  .gitignore  .pre-commit-config.yaml  AmdTest.cpp  BENCHMARK_RESULTS.md  BaAtLarge.cpp  BaAtLargeTest.cpp  Bench.cpp  BenchCholmod.cpp  BenchCholmod.h  BlockMatrix.cpp  BlockMatrix.h  BlockMatrixTest.cpp  BlockStructure.cpp  BlockStructure.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EliminationTree.cpp  EliminationTree.h  EliminationTreeTest.cpp  Factor.cpp  Factor.h  FactorTest.cpp  MatOps.cpp  MatOps.h  MatOpsBlas.cpp  MatOpsRef.cpp  README  README.md  Solver.cpp  Solver.h  SolverTest.cpp  SparseStructure.cpp  SparseStructure.h  SparseStructureTest.cpp  TestingMatGen.cpp  TestingMatGen.h  TestingUtils.cpp  TestingUtils.h  (+2 more)
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
baspacho/: Accessor.h  BlasDefs.h  CMakeLists.txt  CoalescedBlockMatrix.cpp  CoalescedBlockMatrix.h  CublasError.cpp  CudaAtomic.cuh  CudaDefs.h  DebugMacros.h  EliminationTree.cpp  EliminationTree.h  MatOps.h  MatOpsBlas.cpp  MatOpsCpuBase.h  MatOpsCuda.cu  MatOpsRef.cpp  MathUtils.h  Solver.cpp  Solver.h  SparseStructure.cpp  SparseStructure.h  Utils.cpp  Utils.h
baspacho/baspacho/: Accessor.h  BlasDefs.h  CMakeLists.txt  CoalescedBlockMatrix.cpp  CoalescedBlockMatrix.h  ComputationModel.cpp  ComputationModel.h  CublasError.cpp  CudaAtomic.cuh  CudaDefs.h  DebugMacros.h  EliminationTree.cpp  EliminationTree.h  MatOps.h  MatOpsBlas.cpp  MatOpsCpuBase.h  MatOpsCuda.cu  MatOpsFast.cpp  MatOpsRef.cpp  MathUtils.h  Solver.cpp  Solver.h  SparseStructure.cpp  SparseStructure.h  Utils.cpp  Utils.h
baspacho/benchmarking/: BaAtLarge.cpp  BaAtLarge.h  BaAtLargeBench.cpp  BaAtLargeOptimizer.cpp  BaAtLargeTest.cpp  Bench.cpp  BenchCholmod.cpp  BenchCholmod.h  CMakeLists.txt
baspacho/examples/: AtomicOps.h  CMakeLists.txt  OptimizeBaAtLarge.cpp  OptimizeCompModel.cpp  OptimizeSimple.cpp  Optimizer.cpp  Optimizer.h  PCG.cpp  PCG.h  PCG_Sample.cpp  Preconditioner.h  Simple.cpp  SoftLoss.h  Utils.cpp  Utils.h
baspacho/experiments/: Factor.cpp  Factor.h  FactorTest.cpp
baspacho/testing/: CMakeLists.txt  TestingMatGen.cpp  TestingMatGen.h  TestingUtils.cpp  TestingUtils.h
baspacho/tests/: AccessorTest.cpp  BatchedCudaFactorTest.cpp  BatchedCudaSolveTest.cpp  BlockMatrixTest.cpp  CMakeLists.txt  CoalescedBlockMatrixTest.cpp  CreateSolverTest.cpp  CudaFactorTest.cpp  CudaPartialTest.cpp  CudaSolveTest.cpp  EliminationTreeTest.cpp  FactorTest.cpp  MathUtilsTest.cpp  PartialFactorSolveTest.cpp  SolveTest.cpp  SolverSolveTest.cpp  SolverTest.cpp  SparseStructureTest.cpp
benchmarking/: BaAtLargeTest.cpp  Bench.cpp  BenchCholmod.cpp  BenchCholmod.h
cmake/: BundleStaticLibrary.cmake  detect_cuda.cu  get_torch_cuda.py  get_torch_cuda_archs.py
experiments/: Factor.cpp  Factor.h  FactorTest.cpp
testing/: TestingMatGen.cpp  TestingMatGen.h  TestingUtils.cpp  TestingUtils.h
